--- a/overlays/inventory/kustomization.yaml
+++ b/overlays/inventory/kustomization.yaml
@@ -1,10 +1,11 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: test
+namespace: inventory
 resources:
+- ../../config
 - namespace.yaml
 - simple-echo-golang
 images:
 - name: simple-echo-golang-image
-  newName: 192.168.242.46:5050/test/simple-echo-golang
-  newTag: V1.0.2
+  newName: sannonthachai/simple-echo-golang
+  newTag: latest
