--- a/overlays/systems/kustomization.yaml
+++ b/overlays/systems/kustomization.yaml
@@ -1,11 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-
+resources:
+- argocd-image-updater
 images:
 - name: argoprojlabs/argocd-image-updater
   newTag: v0.11.0
-
-bases:
-- ./config
-- ./deployment
-- ./rbac
