--- a/systems/secrets/inventory/vault-container-secret.yml
+++ b/systems/secrets/inventory/vault-container-secret.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret 
 metadata: 
   name: vault-container-secret 
-  namespace: test
+  namespace: inventory
 type: Opaque
 data:
   VAULT_ADDR: <base64 encoded vault addr>
