--- a/systems/argocd/secret/repository.yaml
+++ b/systems/argocd/secret/repository.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: my-private-https-repo
+  name: gitops-repo
   namespace: argocd
   labels:
     argocd.argoproj.io/secret-type: repository
