--- a/systems/secrets/inventory/container-image-pull-secret.yaml
+++ b/systems/secrets/inventory/container-image-pull-secret.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1 
 kind: Secret 
-namespace: test
+namespace: inventory
 metadata: 
   name: docker-register-pull-secret 
 type: kubernetes.io/dockerconfigjson
