--- a/overlays/systems/argocd-image-updater/kustomization.yaml
+++ b/overlays/systems/argocd-image-updater/kustomization.yaml
@@ -7,6 +7,6 @@ resources:
 - ../../../base/systems/argocd-image-updater
 
 patchesStrategicMerge:
-- container-image-pull.secret.yml
+- container-image-pull-secret.yml
 - argocd-image-updater-cm.yaml
 - argocd-image-updater-deployment.yaml
