--- a/overlays/systems/kustomization.yaml
+++ b/overlays/systems/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - argocd-image-updater
+- descheduler
 images:
 - name: argoprojlabs/argocd-image-updater
   newTag: v0.11.0
