--- a/base/systems/argocd-image-updater/config/kustomization.yaml
+++ b/base/systems/argocd-image-updater/config/kustomization.yaml
@@ -4,3 +4,4 @@ kind: Kustomization
 resources:
 - argocd-image-updater-cm.yaml
 - argocd-image-updater-secret.yaml
+- argocd-image-updater-ssh-config.yaml
