--- a/base/systems/argocd-image-updater/deployment/argocd-image-updater-deployment.yaml
+++ b/base/systems/argocd-image-updater/deployment/argocd-image-updater-deployment.yaml
@@ -2,14 +2,14 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app.kubernetes.io/component: controller
     app.kubernetes.io/name: argocd-image-updater
     app.kubernetes.io/part-of: argocd-image-updater
+    app.kubernetes.io/component: controller
   name: argocd-image-updater
 spec:
   selector:
-    matchLabels:
-      app.kubernetes.io/name: argocd-image-updater
+   matchLabels:
+    app.kubernetes.io/name: argocd-image-updater
   strategy:
     type: Recreate
   template:
@@ -18,72 +18,89 @@ spec:
         app.kubernetes.io/name: argocd-image-updater
     spec:
       containers:
-      - command:
-        - /usr/local/bin/argocd-image-updater
+      - args:
         - run
+        image: quay.io/argoprojlabs/argocd-image-updater:latest
+        imagePullPolicy: Always
         env:
         - name: APPLICATIONS_API
           valueFrom:
             configMapKeyRef:
-              key: applications_api
               name: argocd-image-updater-config
+              key: applications_api
               optional: true
         - name: ARGOCD_GRPC_WEB
           valueFrom:
             configMapKeyRef:
-              key: argocd.grpc_web
               name: argocd-image-updater-config
+              key: argocd.grpc_web
               optional: true
         - name: ARGOCD_SERVER
           valueFrom:
             configMapKeyRef:
-              key: argocd.server_addr
               name: argocd-image-updater-config
+              key: argocd.server_addr
               optional: true
         - name: ARGOCD_INSECURE
           valueFrom:
             configMapKeyRef:
-              key: argocd.insecure
               name: argocd-image-updater-config
+              key: argocd.insecure
               optional: true
         - name: ARGOCD_PLAINTEXT
           valueFrom:
             configMapKeyRef:
-              key: argocd.plaintext
               name: argocd-image-updater-config
+              key: argocd.plaintext
               optional: true
         - name: ARGOCD_TOKEN
           valueFrom:
             secretKeyRef:
-              key: argocd.token
               name: argocd-image-updater-secret
+              key: argocd.token
               optional: true
         - name: IMAGE_UPDATER_LOGLEVEL
           valueFrom:
             configMapKeyRef:
-              key: log.level
               name: argocd-image-updater-config
+              key: log.level
               optional: true
         - name: GIT_COMMIT_USER
           valueFrom:
             configMapKeyRef:
-              key: git.user
               name: argocd-image-updater-config
+              key: git.user
               optional: true
         - name: GIT_COMMIT_EMAIL
           valueFrom:
             configMapKeyRef:
+              name: argocd-image-updater-config
               key: git.email
+              optional: true
+        - name: GIT_COMMIT_SIGNING_KEY
+          valueFrom:
+            configMapKeyRef:
+              key: git.commit-signing-key
+              name: argocd-image-updater-config
+              optional: true
+        - name: GIT_COMMIT_SIGNING_METHOD
+          valueFrom:
+            configMapKeyRef:
+              key: git.commit-signing-method
+              name: argocd-image-updater-config
+              optional: true
+        - name: GIT_COMMIT_SIGN_OFF
+          valueFrom:
+            configMapKeyRef:
+              key: git.commit-sign-off
               name: argocd-image-updater-config
               optional: true
         - name: IMAGE_UPDATER_KUBE_EVENTS
           valueFrom:
             configMapKeyRef:
-              key: kube.events
               name: argocd-image-updater-config
+              key: kube.events
               optional: true
-        image: quay.io/argoprojlabs/argocd-image-updater:v0.12.0
-        imagePullPolicy: IfNotPresent
         livenessProbe:
           httpGet:
             path: /healthz
@@ -99,6 +116,15 @@ spec:
             port: 8080
           initialDelaySeconds: 3
           periodSeconds: 30
+        securityContext:
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop:
+            - ALL
+          readOnlyRootFilesystem: true
+          runAsNonRoot: true
+          seccompProfile:
+            type: RuntimeDefault
         volumeMounts:
         - mountPath: /app/config
           name: image-updater-conf
@@ -106,6 +132,12 @@ spec:
           name: ssh-known-hosts
         - mountPath: /app/.ssh
           name: ssh-config
+        - mountPath: /tmp
+          name: tmp
+        - name: ssh-signing-key
+          mountPath: /app/ssh-keys/id_rsa
+          readOnly: true
+          subPath: sshPrivateKey
       serviceAccountName: argocd-image-updater
       volumes:
       - configMap:
@@ -125,3 +157,9 @@ spec:
           name: argocd-image-updater-ssh-config
           optional: true
         name: ssh-config
+      - name: ssh-signing-key
+        secret:
+          secretName: ssh-git-creds
+          optional: true
+      - emptyDir: {}
+        name: tmp
