--- a/base/systems/argocd-image-updater/rbac/argocd-image-updater-clusterrole.yaml
+++ b/base/systems/argocd-image-updater/rbac/argocd-image-updater-clusterrole.yaml
@@ -1,5 +1,5 @@
 apiVersion: rbac.authorization.k8s.io/v1
-kind: Role
+kind: ClusterRole
 metadata:
   labels:
     app.kubernetes.io/name: argocd-image-updater
@@ -8,11 +8,17 @@ metadata:
   name: argocd-image-updater
 rules:
   - apiGroups:
-      - ''
+      - ""
     resources:
-      - secrets
-      - configmaps
+      - events
+    verbs:
+      - create
+  - apiGroups:
+      - argoproj.io
+    resources:
+      - applications
     verbs:
       - get
       - list
-      - watch
+      - update
+      - patch
