--- a/base/systems/argocd-image-updater/rbac/argocd-image-updater-clusterrolebinding.yaml
+++ b/base/systems/argocd-image-updater/rbac/argocd-image-updater-clusterrolebinding.yaml
@@ -1,5 +1,5 @@
 apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
+kind: ClusterRoleBinding
 metadata:
   labels:
     app.kubernetes.io/name: argocd-image-updater
@@ -8,8 +8,9 @@ metadata:
   name: argocd-image-updater
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  kind: Role
+  kind: ClusterRole
   name: argocd-image-updater
 subjects:
   - kind: ServiceAccount
     name: argocd-image-updater
+    namespace: argocd
