--- a/systems/argocd/install/install.yaml
+++ b/systems/argocd/install/install.yaml
@@ -25327,6 +25327,9 @@ spec:
       containers:
       - args:
         - /usr/local/bin/argocd-applicationset-controller
+        resources:
+          requests:
+            memory: "300Mi"
         env:
         - name: ARGOCD_APPLICATIONSET_CONTROLLER_GLOBAL_PRESERVED_ANNOTATIONS
           valueFrom:
@@ -26247,6 +26250,9 @@ spec:
       containers:
       - args:
         - /usr/local/bin/argocd-server
+        resources:
+          requests:
+            memory: "300Mi"
         env:
         - name: ARGOCD_API_SERVER_REPLICAS
           value: "2"
