Add Prometheus, Refactor

--- a/overlays/systems/kustomization.yaml
+++ b/overlays/systems/kustomization.yaml
@@ -2,12 +2,17 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 # - argocd-image-updater
-# - descheduler
-- reloader
+# - reloader
+- descheduler
+- prometheus
 images:
-- name: quay.io/argoprojlabs/argocd-image-updater
-  newTag: v0.15.1
+# - name: quay.io/argoprojlabs/argocd-image-updater
+#   newTag: v0.15.1
+# - name: ghcr.io/stakater/reloader
+#   newTag: v1.2.1
 - name: registry.k8s.io/descheduler/descheduler
   newTag: v0.31.0
-- name: ghcr.io/stakater/reloader
-  newTag: v1.2.1
+- name: quay.io/prometheus/node-exporter
+  newTag: v1.8.2
+- name: quay.io/brancz/kube-rbac-proxy
+  newTag: v0.18.2
