--- a/systems/argocd/configmap/argocd-rbac-cm.yaml
+++ b/systems/argocd/configmap/argocd-rbac-cm.yaml
@@ -8,10 +8,9 @@ metadata:
     app.kubernetes.io/part-of: argocd
 data:
   policy.csv: |
-    # Allow Group inventory to access Project inventory only
-    p, role:inventory-user, applications, get, inventory/*
-    p, role:inventory-user, applications, sync, inventory/*
-    g, inventory, role:inventory-user
+    p, role:ea-dev, applications, get, EA/*, allow
+    p, role:ea-dev, applications, sync, EA/*, allow
+    g, EA, role:ea-dev
 
-    g, system, role:admin
+    g, gitops, role:admin
   policy.default: role:readonly
