--- a/overlays/inventory/ingresses/kustomization.yaml
+++ b/overlays/inventory/ingresses/kustomization.yaml
@@ -2,10 +2,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: sit-eolo
 resources:
-- doe-booking-backend-ingress.yml
-- doe-booking-frontend-ingress.yml
-- eworkpermitsit-ingress.yml
+- doe-booking-backend-ingress.yaml
+- doe-booking-frontend-ingress.yaml
+- eworkpermitsit-ingress.yaml
 
 # SIT
-- sit-doe-cms-be-ingress.yml
-- sit-doe-cms-fe-ingress.yml
+- sit-doe-cms-be-ingress.yaml
+- sit-doe-cms-fe-ingress.yaml
