--- a/overlays/systems/argocd-image-updater/kustomization.yaml
+++ b/overlays/systems/argocd-image-updater/kustomization.yaml
@@ -7,5 +7,5 @@ resources:
 - ../../../base/systems/argocd-image-updater
 
 patchesStrategicMerge:
-- container-image-pull-secret.yml
+- container-image-pull-secret.yaml
 - argocd-image-updater-cm.yaml
