--- a/systems/argocd/secret/repository.yaml
+++ b/systems/argocd/secret/repository.yaml
@@ -6,9 +6,10 @@ metadata:
   labels:
     argocd.argoproj.io/secret-type: repository
 stringData:
-  url: https://github.com/sannonthachai/gitops
-  password: 
+  url: http://192.168.242.46/gitops/gitops.git
   username: 
+  password: 
   insecure: "true" # Ignore validity of server's TLS certificate. Defaults to "false"
-  forceHttpBasicAuth: "true" # Skip auth method negotiation and force usage of HTTP basic auth. Defaults to "false"
-  enableLfs: "true" # Enable git-lfs for this repository. Defaults to "false"
+  type: git
+  project: default
+  name: gitlab
