--- a/overlays/systems/prometheus/kustomization.yaml
+++ b/overlays/systems/prometheus/kustomization.yaml
@@ -2,9 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: monitoring
 
-commonLabels:
-  app: my-app
-
 resources:
 - namespace.yaml
+- ../../../base/systems/prometheus/crds
 - ../../../base/systems/prometheus/node-exporter
