--- a/base/systems/argocd-image-updater/deployment/argocd-image-updater-deployment.yaml
+++ b/base/systems/argocd-image-updater/deployment/argocd-image-updater-deployment.yaml
@@ -20,7 +20,7 @@ spec:
       containers:
       - args:
         - run
-        image: quay.io/argoprojlabs/argocd-image-updater:latest
+        image: argocd-image-updater
         imagePullPolicy: Always
         env:
         - name: APPLICATIONS_API
