--- a/base/systems/descheduler/deployment.yaml
+++ b/base/systems/descheduler/deployment.yaml
@@ -2,7 +2,6 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: descheduler
-  namespace: kube-system
   labels:
     app: descheduler
 spec:
@@ -19,7 +18,7 @@ spec:
       serviceAccountName: descheduler-sa
       containers:
         - name: descheduler
-          image: registry.k8s.io/descheduler/descheduler:v0.31.0
+          image: descheduler
           imagePullPolicy: IfNotPresent
           command:
             - "/bin/descheduler"
