--- a/base/systems/prometheus/node-exporter/nodeExporter-daemonset.yaml
+++ b/base/systems/prometheus/node-exporter/nodeExporter-daemonset.yaml
@@ -34,7 +34,7 @@ spec:
         - --collector.filesystem.mount-points-exclude=^/(dev|proc|sys|run/k3s/containerd/.+|var/lib/docker/.+|var/lib/kubelet/pods/.+)($|/)
         - --collector.netclass.ignored-devices=^(veth.*|[a-f0-9]{15})$
         - --collector.netdev.device-exclude=^(veth.*|[a-f0-9]{15})$
-        image: quay.io/prometheus/node-exporter:v1.8.2
+        image: node-exporter
         name: node-exporter
         resources:
           limits:
@@ -67,7 +67,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: status.podIP
-        image: quay.io/brancz/kube-rbac-proxy:v0.18.2
+        image: node-exporter/kube-rbac-proxy
         name: kube-rbac-proxy
         ports:
         - containerPort: 9100
