--- a/base/systems/reloader/deployment.yaml
+++ b/base/systems/reloader/deployment.yaml
@@ -17,7 +17,7 @@ spec:
         app: reloader-reloader
     spec:
       containers:
-        - image: "ghcr.io/stakater/reloader:v1.1.0"
+        - image: reloader
           imagePullPolicy: IfNotPresent
           name: reloader-reloader
           env:
