--- a/overlays/systems/descheduler/configmap.yaml
+++ b/overlays/systems/descheduler/configmap.yaml
@@ -11,6 +11,8 @@ data:
       - name: ProfileName
         pluginConfig:
         - name: "DefaultEvictor"
+          args:
+            nodeFit: true
         - name: "RemoveDuplicates"
         - name: "LowNodeUtilization"
           args:
