--- a/overlays/systems/descheduler/configmap.yaml
+++ b/overlays/systems/descheduler/configmap.yaml
@@ -14,6 +14,11 @@ data:
           args:
             nodeFit: true
         - name: "RemoveDuplicates"
+        - name: "RemovePodsViolatingInterPodAntiAffinity"
+        - name: "RemovePodsViolatingNodeAffinity"
+          args:
+            nodeAffinityType:
+            - "requiredDuringSchedulingIgnoredDuringExecution"
         - name: "LowNodeUtilization"
           args:
             thresholds:
@@ -23,6 +28,10 @@ data:
               "cpu": 50
               "memory": 50
         plugins:
+          deschedule:
+            enabled:
+              - "RemovePodsViolatingInterPodAntiAffinity"
+              - "RemovePodsViolatingNodeAffinity"
           balance:
             enabled:
               - "LowNodeUtilization"
