--- a/base/systems/prometheus/kube/kubeStateMetrics-serviceAccount.yaml
+++ b/base/systems/prometheus/kube/kubeStateMetrics-serviceAccount.yaml
@@ -4,7 +4,7 @@ kind: ServiceAccount
 metadata:
   labels:
     app.kubernetes.io/component: exporter
-    app.kubernetes.io/name: node-exporter
+    app.kubernetes.io/name: kube-state-metrics
     app.kubernetes.io/part-of: kube-prometheus
-  name: node-exporter
+  name: kube-state-metrics
   namespace: monitoring
