--- a/base/systems/prometheus/node-exporter/nodeExporter-prometheusRule.yaml
+++ b/base/systems/prometheus/node-exporter/nodeExporter-prometheusRule.yaml
@@ -8,6 +8,7 @@ metadata:
     prometheus: k8s
     role: alert-rules
   name: node-exporter-rules
+  namespace: monitoring
 spec:
   groups:
   - name: node-exporter
