--- a/base/systems/prometheus/operator/prometheusOperator-serviceAccount.yaml
+++ b/base/systems/prometheus/operator/prometheusOperator-serviceAccount.yaml
@@ -3,8 +3,8 @@ automountServiceAccountToken: false
 kind: ServiceAccount
 metadata:
   labels:
-    app.kubernetes.io/component: exporter
-    app.kubernetes.io/name: node-exporter
+    app.kubernetes.io/component: controller
+    app.kubernetes.io/name: prometheus-operator
     app.kubernetes.io/part-of: kube-prometheus
-  name: node-exporter
+  name: prometheus-operator
   namespace: monitoring
