--- a/base/systems/prometheus/prometheus/prometheus-roleBindingConfig.yaml
+++ b/base/systems/prometheus/prometheus/prometheus-roleBindingConfig.yaml
@@ -1,17 +1,18 @@
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
+kind: RoleBinding
 metadata:
   labels:
-    app.kubernetes.io/component: exporter
-    app.kubernetes.io/name: node-exporter
+    app.kubernetes.io/component: prometheus
+    app.kubernetes.io/instance: k8s
+    app.kubernetes.io/name: prometheus
     app.kubernetes.io/part-of: kube-prometheus
-  name: node-exporter
+  name: prometheus-k8s-config
   namespace: monitoring
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: node-exporter
+  kind: Role
+  name: prometheus-k8s-config
 subjects:
 - kind: ServiceAccount
-  name: node-exporter
+  name: prometheus-k8s
   namespace: monitoring
