--- a/base/systems/prometheus/kube/kubeStateMetrics-clusterRoleBinding.yaml
+++ b/base/systems/prometheus/kube/kubeStateMetrics-clusterRoleBinding.yaml
@@ -3,15 +3,15 @@ kind: ClusterRoleBinding
 metadata:
   labels:
     app.kubernetes.io/component: exporter
-    app.kubernetes.io/name: node-exporter
+    app.kubernetes.io/name: kube-state-metrics
     app.kubernetes.io/part-of: kube-prometheus
-  name: node-exporter
+  name: kube-state-metrics
   namespace: monitoring
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: node-exporter
+  name: kube-state-metrics
 subjects:
 - kind: ServiceAccount
-  name: node-exporter
+  name: kube-state-metrics
   namespace: monitoring
