--- a/base/systems/prometheus/node-exporter/nodeExporter-daemonset.yaml
+++ b/base/systems/prometheus/node-exporter/nodeExporter-daemonset.yaml
@@ -6,6 +6,7 @@ metadata:
     app.kubernetes.io/name: node-exporter
     app.kubernetes.io/part-of: kube-prometheus
   name: node-exporter
+  namespace: monitoring
 spec:
   selector:
     matchLabels:
@@ -34,7 +35,7 @@ spec:
         - --collector.filesystem.mount-points-exclude=^/(dev|proc|sys|run/k3s/containerd/.+|var/lib/docker/.+|var/lib/kubelet/pods/.+)($|/)
         - --collector.netclass.ignored-devices=^(veth.*|[a-f0-9]{15})$
         - --collector.netdev.device-exclude=^(veth.*|[a-f0-9]{15})$
-        image: node-exporter
+        image: prom/node-exporter
         name: node-exporter
         resources:
           limits:
@@ -67,7 +68,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: status.podIP
-        image: node-exporter/kube-rbac-proxy
+        image: prom/kube-rbac-proxy
         name: kube-rbac-proxy
         ports:
         - containerPort: 9100
