--- a/base/systems/prometheus/operator/prometheusOperator-clusterRoleBinding.yaml
+++ b/base/systems/prometheus/operator/prometheusOperator-clusterRoleBinding.yaml
@@ -2,16 +2,16 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   labels:
-    app.kubernetes.io/component: exporter
-    app.kubernetes.io/name: node-exporter
+    app.kubernetes.io/component: controller
+    app.kubernetes.io/name: prometheus-operator
     app.kubernetes.io/part-of: kube-prometheus
-  name: node-exporter
+  name: prometheus-operator
   namespace: monitoring
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: node-exporter
+  name: prometheus-operator
 subjects:
 - kind: ServiceAccount
-  name: node-exporter
+  name: prometheus-operator
   namespace: monitoring
