--- a/base/systems/prometheus/operator/prometheusOperator-networkPolicy.yaml
+++ b/base/systems/prometheus/operator/prometheusOperator-networkPolicy.yaml
@@ -2,10 +2,10 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
   labels:
-    app.kubernetes.io/component: exporter
-    app.kubernetes.io/name: node-exporter
+    app.kubernetes.io/component: controller
+    app.kubernetes.io/name: prometheus-operator
     app.kubernetes.io/part-of: kube-prometheus
-  name: node-exporter
+  name: prometheus-operator
   namespace: monitoring
 spec:
   egress:
@@ -16,12 +16,12 @@ spec:
         matchLabels:
           app.kubernetes.io/name: prometheus
     ports:
-    - port: 9100
+    - port: 8443
       protocol: TCP
   podSelector:
     matchLabels:
-      app.kubernetes.io/component: exporter
-      app.kubernetes.io/name: node-exporter
+      app.kubernetes.io/component: controller
+      app.kubernetes.io/name: prometheus-operator
       app.kubernetes.io/part-of: kube-prometheus
   policyTypes:
   - Egress
