--- a/base/systems/prometheus/operator/prometheusOperator-service.yaml
+++ b/base/systems/prometheus/operator/prometheusOperator-service.yaml
@@ -2,18 +2,18 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app.kubernetes.io/component: exporter
-    app.kubernetes.io/name: node-exporter
+    app.kubernetes.io/component: controller
+    app.kubernetes.io/name: prometheus-operator
     app.kubernetes.io/part-of: kube-prometheus
-  name: node-exporter
+  name: prometheus-operator
   namespace: monitoring
 spec:
   clusterIP: None
   ports:
   - name: https
-    port: 9100
+    port: 8443
     targetPort: https
   selector:
-    app.kubernetes.io/component: exporter
-    app.kubernetes.io/name: node-exporter
+    app.kubernetes.io/component: controller
+    app.kubernetes.io/name: prometheus-operator
     app.kubernetes.io/part-of: kube-prometheus
