--- a/overlays/systems/kustomization.yaml
+++ b/overlays/systems/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 # - argocd-image-updater
-# - reloader
+- reloader
 - descheduler
 - prometheus
 # - event-exporter
@@ -10,16 +10,28 @@ images:
 # - name: argocd-image-updater
 #   newName: quay.io/argoprojlabs/argocd-image-updater
 #   newTag: v0.15.1
-# - name: reloader
-#   newName: ghcr.io/stakater/reloader
-#   newTag: v1.2.1
+- name: reloader
+  newName: ghcr.io/stakater/reloader
+  newTag: v1.2.1
 - name: descheduler
   newName: registry.k8s.io/descheduler/descheduler
   newTag: v0.31.0
-- name: node-exporter
+- name: prom/alertmanager
+  newName: quay.io/prometheus/alertmanager
+  newTag: v0.27.0
+- name: prom/kube-state-metrics
+  newName: registry.k8s.io/kube-state-metrics/kube-state-metrics
+  newTag: v2.14.0
+- name: prom/node-exporter
   newName: quay.io/prometheus/node-exporter
   newTag: v1.8.2
-- name: node-exporter/kube-rbac-proxy
+- name: prom/operator
+  newName: quay.io/prometheus-operator/prometheus-operator
+  newTag: v0.79.2
+- name: prom/prometheus
+  newName: quay.io/prometheus/prometheus
+  newTag: v3.1.0
+- name: prom/kube-rbac-proxy
   newName: quay.io/brancz/kube-rbac-proxy
   newTag: v0.18.2
 # - name: event-exporter
