--- a/base/systems/descheduler/deployment.yaml
+++ b/base/systems/descheduler/deployment.yaml
@@ -4,6 +4,8 @@ metadata:
   name: descheduler
   labels:
     app: descheduler
+  annotations:
+    reloader.stakater.com/auto: "true"
 spec:
   replicas: 1
   selector:
