--- a/base/systems/prometheus/prometheus/prometheus-roleBindingSpecificNamespaces.yaml
+++ b/base/systems/prometheus/prometheus/prometheus-roleBindingSpecificNamespaces.yaml
@@ -54,4 +54,22 @@ items:
   - kind: ServiceAccount
     name: prometheus-k8s
     namespace: monitoring
+- apiVersion: rbac.authorization.k8s.io/v1
+  kind: RoleBinding
+  metadata:
+    labels:
+      app.kubernetes.io/component: prometheus
+      app.kubernetes.io/instance: k8s
+      app.kubernetes.io/name: prometheus
+      app.kubernetes.io/part-of: kube-prometheus
+    name: prometheus-k8s
+    namespace: ingress-nginx
+  roleRef:
+    apiGroup: rbac.authorization.k8s.io
+    kind: Role
+    name: prometheus-k8s
+  subjects:
+  - kind: ServiceAccount
+    name: prometheus-k8s
+    namespace: monitoring
 kind: RoleBindingList
