Create PVC for prometheus

--- a/overlays/systems/prometheus/patches/prometheus-prometheus.yaml
+++ b/overlays/systems/prometheus/patches/prometheus-prometheus.yaml
@@ -7,3 +7,9 @@ spec:
   additionalScrapeConfigs:
     name: additional-scrape-configs
     key: additional-scrape-configs.yaml
+  volumes:
+  - name: pvc-prometheus-k8s
+    persistentVolumeClaim:
+      claimName: pvc-prometheus-k8s
+  retention: 2d
+  replicas: 1
