--- a/overlays/systems/namespaces/kustomization.yaml
+++ b/overlays/systems/namespaces/kustomization.yaml
@@ -2,4 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- ../../../base/systems/reloader
+- argocd.yaml
+- vault.yaml
+- monitoring.yaml
