--- a/overlays/systems/prometheus/kustomization.yaml
+++ b/overlays/systems/prometheus/kustomization.yaml
@@ -2,8 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- namespace.yaml
-- configs
+- secrets
 - patches
 - ../../../base/systems/prometheus/crds
 - ../../../base/systems/prometheus/alertmanager
