--- a/overlays/systems/prometheus/prometheus-patch/kustomization.yaml
+++ b/overlays/systems/prometheus/prometheus-patch/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 
 patchesStrategicMerge:
 - prometheus-service.yaml
-# - prometheus-networkPolicy.yaml # For NodePort Service
+- prometheus-networkPolicy.yaml
 - prometheus-prometheus.yaml
 
 resources:
