--- a/overlays/systems/prometheus/prometheus-patch/prometheus-prometheus.yaml
+++ b/overlays/systems/prometheus/prometheus-patch/prometheus-prometheus.yaml
@@ -14,6 +14,7 @@ spec:
         accessModes: ["ReadWriteOnce"]
         resources:
             requests:
-              storage: 15Gi
-  retention: 2d
+              storage: 10Gi
+  # retention: 2d
+  retentionSize: 8GB
   replicas: 1
