--- a/systems/argocd/applications/vault/vault.yaml
+++ b/systems/argocd/applications/vault/vault.yaml
@@ -21,10 +21,7 @@ spec:
         global:
           namespace: "vault"
         injector:
-          image:
-            repository: "hashicorp/vault-k8s"
-            tag: "1.5.0"
-            pullPolicy: IfNotPresent
+          enabled: false
         server:
           image:
             repository: "hashicorp/vault"
@@ -41,12 +38,6 @@ spec:
             enabled: true
             size: 5Gi
             storageClass: "longhorn"
-        csi:
-          enabled: true
-          image:
-            repository: "hashicorp/vault-csi-provider"
-            tag: "1.5.0"
-            pullPolicy: IfNotPresent
   syncPolicy:
     automated: {}
     syncOptions:
