--- a/overlays/systems/prometheus/prometheus-patch/kustomization.yaml
+++ b/overlays/systems/prometheus/prometheus-patch/kustomization.yaml
@@ -2,8 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 patchesStrategicMerge:
-- prometheus-service.yaml
-- prometheus-networkPolicy.yaml
+# - prometheus-service.yaml
+# - prometheus-networkPolicy.yaml
 - prometheus-prometheus.yaml
 
 resources:
