--- a/overlays/systems/vault-secrets-operator/kustomization.yaml
+++ b/overlays/systems/vault-secrets-operator/kustomization.yaml
@@ -1,6 +1,7 @@
 # Copyright (c) HashiCorp, Inc.
 # SPDX-License-Identifier: BUSL-1.1
-
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
 # Adds namespace to all resources.
 namespace: vault-secrets-operator-system
 
