--- a/base/argo-cd/applications.yaml
+++ b/base/argo-cd/applications.yaml
@@ -16,10 +16,12 @@ spec:
     repoURL: http://192.168.242.46/gitops/gitops.git
     targetRevision: HEAD
   syncPolicy:
-    automated: {}
+    automated:
+      prune: true
+      selfHeal: true
     syncOptions:
-    - Prune=False
-    - ServerSideApply=true
+      - ServerSideApply=true
+      - CreateNamespace=true
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
@@ -39,10 +41,12 @@ spec:
     repoURL: http://192.168.242.46/gitops/gitops.git
     targetRevision: HEAD
   syncPolicy:
-    automated: {}
+    automated:
+      prune: true
+      selfHeal: true
     syncOptions:
-    - Prune=False
-    - ServerSideApply=true
+      - ServerSideApply=true
+      - CreateNamespace=true
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
@@ -62,7 +66,9 @@ spec:
     repoURL: http://192.168.242.46/gitops/gitops.git
     targetRevision: HEAD
   syncPolicy:
-    automated: {}
+    automated:
+      prune: true
+      selfHeal: true
     syncOptions:
-    - Prune=False
-    - ServerSideApply=true
+      - ServerSideApply=true
+      - CreateNamespace=true
