--- a/overlays/systems/redis-insight/application.yaml
+++ b/overlays/systems/redis-insight/application.yaml
@@ -13,13 +13,16 @@ metadata:
 spec:
   destination:
     server: https://kubernetes.default.svc
+    namespace: redis
   project: default
   source:
     path: overlays/systems/redis-insight/overlay
     repoURL: http://192.168.242.46/gitops/gitops.git
     targetRevision: HEAD
   syncPolicy:
-    automated: {}
+    automated:
+      prune: true
+      selfHeal: true
     syncOptions:
-    - Prune=False
-    - ServerSideApply=true
+      - ServerSideApply=true
+      - CreateNamespace=true
