--- a/overlays/systems/vault-secrets-operator/application.yaml
+++ b/overlays/systems/vault-secrets-operator/application.yaml
@@ -29,8 +29,9 @@ spec:
           upgradeCRDs:
             enabled: false
   syncPolicy:
-    automated: {}
+    automated:
+      prune: true
+      selfHeal: true
     syncOptions:
-    - Prune=False
-    - ServerSideApply=true
-    - CreateNamespace=true
+      - ServerSideApply=true
+      - CreateNamespace=true
