--- a/overlays/systems/vault/application.yaml
+++ b/overlays/systems/vault/application.yaml
@@ -37,8 +37,9 @@ spec:
             size: 5Gi
             storageClass: "longhorn"
   syncPolicy:
-    automated: {}
+    automated:
+      prune: true
+      selfHeal: true
     syncOptions:
-    - Prune=False
-    - ServerSideApply=true
-    - CreateNamespace=true
+      - ServerSideApply=true
+      - CreateNamespace=true
