--- a/overlays/systems/argocd-image-updater/kustomization.yaml
+++ b/overlays/systems/argocd-image-updater/kustomization.yaml
@@ -1,10 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: argocd
 
 resources:
-- ../../../base/systems/argocd-image-updater
-
-patchesStrategicMerge:
-- container-image-pull-secret.yaml
-- argocd-image-updater-cm.yaml
+- application.yaml
