--- a/overlays/argo-cd/patches/configmaps/argocd-cm.yaml
+++ b/overlays/argo-cd/patches/configmaps/argocd-cm.yaml
@@ -16,5 +16,5 @@ data:
         clientID: $argocd-config-credential:clientID
         clientSecret: $argocd-config-credential:clientSecret
         useLoginAsID: false
-  url: http://192.168.242.151:30945
+  url: http://192.168.242.151:30945 # NodePort ArgoCD
   # exec.enabled: "true" # Enable exec console
