--- a/overlays/argo-cd/service-accounts/kustomization.yaml
+++ b/overlays/argo-cd/service-accounts/kustomization.yaml
@@ -2,6 +2,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - configmap.yaml
-  - rbac.yaml
-  - deployment.yaml
+- argocd.yaml
