--- a/overlays/argo-cd/patches/configmaps/argocd-cmd-params-cm.yaml
+++ b/overlays/argo-cd/patches/configmaps/argocd-cmd-params-cm.yaml
@@ -6,6 +6,6 @@ metadata:
     app.kubernetes.io/name: argocd-cmd-params-cm
     app.kubernetes.io/part-of: argocd
 data:
-  redis.server: argocd-redis-ha-haproxy:6379
+  redis.server: argocd-redis:6379
   server.insecure: "true"
   controller.diff.server.side: "true" # Comment if not set annotation in application -> argocd.argoproj.io/compare-options: ServerSideDiff=true
